<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Material_Design</string>
    <string name="cat_bottomappbar_title">Bottom App Bar</string>
    <string name="cat_bottomappbar_description">
    A bottom app bar provides a docked bar at the bottom of the screen for common application
    actions. The bottom app bar includes a floating button for a primary action and a navigation bar
    area for secondary actions.
  </string>
    <string name="cat_bottomappbar_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim."</string>
    <string name="cat_bottomappbar_center">Center</string>
    <string name="cat_bottomappbar_fab_hide">Hide Fab</string>
    <string name="cat_bottomappbar_fab_show">Show Fab</string>
    <string name="cat_bottomappbar_scroll_hide">Hide on scroll</string>
    <string name="cat_bottomappbar_fab_circle">Circle</string>
    <string name="cat_bottomappbar_fab_diamond">Diamond</string>
    <string name="cat_bottomappbar_end">End</string>
    <string name="cat_bottomappbar_3d">3D</string>
    <string name="cat_bottomappbar_accelerator">Accelerator</string>
    <string name="cat_bottomappbar_search">Search</string>
    <string name="cat_bottomappbar_dashboard">Dashboard</string>
    <string name="cat_bottomappbar_navigation_button_content_description">Show navigation drawer</string>
    <string name="cat_bottomappbar_fab_button_content_description">FAB</string>
    <string name="cat_toc_title">Material Components</string>
    <string name="cat_toc_status_wip">WIP</string>
    <string name="cat_edge_to_edge_enable_description">Enable edge to edge</string>
    <string name="cat_edge_to_edge_disable_description">Disable edge to edge</string>
    <string name="cat_choose_theme_description">Choose theme</string>
    <string name="toolbar_navigation_close_description">Close demo</string>
    <string name="cat_demo_landing_description_header">Description</string>
    <string name="cat_demo_landing_links_header">Resources</string>
    <string name="cat_demo_landing_additional_demos_header">Additional Examples</string>
    <string name="cat_demo_landing_row_demo_header">Demo</string>
    <string name="cat_demo_landing_favorite">Favorite</string>
    <string name="cat_demo_memory_usage" translatable="false">used: <xliff:g example="1MB" id="numerator">%1$s</xliff:g> / <xliff:g example="10MB" id="denominator">%2$s</xliff:g> (<xliff:g example="10" id="percentage">%3$d</xliff:g>%%)</string>
    <string name="cat_bottom_nav_title">Bottom Navigation</string>
    <string name="cat_bottom_nav_label_visibility_demo_title">Label Visibility Demo</string>
    <string name="cat_bottom_nav_color_styles_demo_title">Color Styles Demo</string>
    <string name="cat_bottom_nav_animated_demo_title">Animated Demo</string>
    <string name="cat_bottom_nav_description">
    Bottom navigation bars make it easy to explore and switch between top-level views in a single
    tap. This navigational element resides at the bottom of the screen, and provides direct access
    for three to five destinations within an app.
  </string>
    <string name="cat_bottom_nav_legacy_title">Legacy Bottom Nav</string>
    <string name="cat_bottom_nav_default_title" description="A label for the default Bottom Navigation widget. [CHAR_LIMIT=20]">Default Bottom Nav</string>
    <string name="cat_bottom_nav_colored_title">Colored Bottom Nav</string>
    <string name="cat_bottom_nav_item_name">Item %1$d</string>
    <string name="cat_bottom_nav_page_1_name">Page 1</string>
    <string name="cat_bottom_nav_page_2_name">Page 2</string>
    <string name="cat_bottom_nav_page_3_name">Page 3</string>
    <string name="cat_bottom_nav_page_4_name">Page 4</string>
    <string name="cat_bottom_nav_page_5_name">Page 5</string>
    <string name="cat_bottom_nav_add_nav_item">Add nav item</string>
    <string name="cat_bottom_nav_remove_nav_item">Remove nav item</string>
    <string name="cat_bottom_nav_increment_badge_number" description="The title of a button to increment the notification number. [CHAR_LIMIT=20]">+Badge number</string>
    <string name="cat_bottom_nav_icon_size_slider_title">Icon size: </string>
    <string name="cat_bottom_nav_label_visibility_mode_title">Label visibility mode:</string>
    <string name="cat_bottom_nav_label_visibility_mode_auto">Auto</string>
    <string name="cat_bottom_nav_label_visibility_mode_selected">Selected</string>
    <string name="cat_bottom_nav_label_visibility_mode_labeled">Labeled</string>
    <string name="cat_bottom_nav_label_visibility_mode_unlabeled">Unlabeled</string>
    <string name="cat_bottom_nav_slider_max">48dp</string>
    <string name="cat_bottom_nav_slider_min">0dp</string>
    <string name="cat_bottom_nav_alarm">Alarm</string>
    <string name="cat_bottom_nav_clock">Clock</string>
    <string name="cat_bottom_nav_timer">Timer</string>
    <string name="cat_bottom_nav_stopwatch">Stopwatch</string>
    <string name="cat_bottom_nav_badge_gravity_top_end">Top end</string>
    <string name="cat_bottom_nav_badge_gravity_top_start">Top start</string>
    <string name="cat_bottom_nav_badge_gravity_bottom_end">Bottom end</string>
    <string name="cat_bottom_nav_badge_gravity_bottom_start">Bottom start</string>
    <string name="cat_bottom_nav_badge_gravity_spinner_label">Badge gravity</string>
    <string name="cat_toc_buttons">Buttons</string>
    <string name="cat_buttons_toggle_group">Buttons Toggle Group</string>
    <string name="cat_buttons_title">Buttons</string>
    <string name="cat_buttons_description">
    Buttons communicate the action that will occur when the user touches them.
    They may display text, imagery, or both.
    Flat buttons and raised buttons are the most commonly used types.
  </string>
    <string name="cat_button_label_enabled">Enabled</string>
    <string name="cat_button_label_disabled">Disabled</string>
    <string name="cat_button_icon_btn_text">Icon only button</string>
    <string name="cat_btn_text">Material button</string>
    <string name="cat_unelevated_btn_text">Unelevated button</string>
    <string name="cat_text_btn_text">Text button</string>
    <string name="cat_stroked_btn_text">Stroked button</string>
    <string name="cat_icon_btn_text">Icon button</string>
    <string name="cat_icon_text_btn_text">Icon text button</string>
    <string name="cat_filled_buttons_section_title">Filled buttons</string>
    <string name="cat_outlined_btn_text">Outlined buttons</string>
    <string name="cat_outlined_icon_btn_text">Icon only buttons</string>
    <string name="cat_button_clicked">Button clicked</string>
    <string name="cat_snackbar_action_button_text">Done</string>
    <string name="cat_single_select">Single-select</string>
    <string name="cat_multi_select">Multi-select</string>
    <string name="cat_icon_only">Icon only</string>
    <string name="cat_button_label_private">Private</string>
    <string name="cat_button_label_team">Team</string>
    <string name="cat_button_label_everyone">Everyone</string>
    <string name="cat_button_label_custom">Custom</string>
    <string name="cat_button_label_cheese">Cheese</string>
    <string name="cat_button_label_tomatoes">Tomatoes</string>
    <string name="cat_button_label_mushrooms">Mushrooms</string>
    <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
        name="cat_icon_button_label_paint_bucket">Paint bucket icon</string>
    <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
        name="cat_icon_button_label_plus">Plus icon</string>
    <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
        name="cat_icon_button_label_components">Components icon</string>
    <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
        name="cat_icon_button_label_accelerator">Accelerator icon</string>
    <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
        name="cat_icon_button_label_dialog">Dialog icon</string>
    <string name="cat_button_require_selection" translatable="false">Require Selection</string>
    <string name="cat_bottomsheet_title">Bottom Sheet</string>
    <string name="cat_bottomsheet_description">
    Displays a demo of the Bottom Sheet component.
  </string>
    <string name="cat_bottomsheet_switch_text">
    fullscreen mode
  </string>
    <string name="cat_bottomsheet_expansion_switch_text">
    restrict expansion
  </string>
    <string name="cat_bottomsheet_button_text">
    Show Modal BottomSheetDialog
  </string>
    <string name="cat_bottomsheet_state_collapsed" translatable="false">
    STATE_COLLAPSED
  </string>
    <string name="cat_bottomsheet_state_dragging" translatable="false">
    STATE_DRAGGING
  </string>
    <string name="cat_bottomsheet_state_expanded" translatable="false">
    STATE_EXPANDED
  </string>
    <string name="cat_bottomsheet_state_half_expanded" translatable="false">
    STATE_HALF_EXPANDED\nhalfExpandedRatio = %.2f
  </string>
    <string name="cat_bottomsheet_persistent">
    Persistent Bottomsheet
  </string>
    <string name="cat_bottomsheet_button_label_enabled">Enabled</string>
</resources>