<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:contentDescription="@null"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_logo_components_48px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/cat_toc_title"
            android:textAppearance="?attr/textAppearanceHeadline6" />
    </LinearLayout>

    <ImageButton
        style="@style/Widget.Catalog.EdgeToEdgeButton"
        android:contentDescription="@string/cat_choose_theme_description" />

    <ImageButton
        style="@style/Widget.Catalog.ChooseThemeButton"
        android:contentDescription="@string/cat_edge_to_edge_enable_description" />

</FrameLayout>
